<resources>
    <string name="app_name_ch">小康之家</string>
    <string name="app_name_en">SETOXCARE</string>
    <string name="app_version">APP version</string>
    <string name="about_us">about us</string>
    <string name="about_us_desc">Tulip industry</string>
    <string name="language">Language</string>
    <string name="measure_time">measure time</string>
    <string name="measure">measure</string>
    <string name="record">记录</string>
    <string name="setting">setting</string>
    <string name="list">列表</string>
    <string name="chart">图表</string>
    <string name="work_mode">Operating mode</string>
    <string name="work_mode_usb">USB wired mode</string>
    <string name="work_mode_ble">Bluetooth wireless mode</string>
    <string name="speed_level">speed level</string>
    <string name="gain_level">gain level</string>
    <string name="pulse_sound">pulse sound</string>
    <string name="language_switch">language switch</string>
    <string name="min_val">lower limit</string>
    <string name="max_val">Upper limit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="spo2">Blood oxygen (%)</string>
    <string name="pr">Pulse (bpm)  </string>
    <string name="pi">Perfusion index(%)</string>
    <string name="unit_spo2">SPO2(%)</string>
    <string name="unit_pr">PR(bpm)</string>
    <string name="unit_pi">PI(%)</string>
    <string name="alarm_spo2_switch">SPO2 alarm switch</string>
    <string name="alarm_spo2_value">SPO2 alarm value</string>
    <string name="alarm_pr_switch">PR alarm switch</string>
    <string name="alarm_pr_value">PR alarm value</string>
    <string name="uart_setting">Serial port settings</string>
    <string name="uart_baud_rate">Baud rate</string>
    <string name="uart_data_bit">Data bit</string>
    <string name="uart_stop_bit">Stop bit</string>
    <string name="uart_parity">Check Digit</string>
    <string name="uart_flow_control">Flow Control</string>
    <string name="uart_tips">Explanation:\nCheck digit: 0-none, 1-Odd, 2-Even \nStop bit: 0-1 stop bit, 1-2 stop bit</string>
    <string name="ble_scan">scanning</string>
    <string name="ble_stop">stop</string>
    <string name="ble_connecting">connecting</string>
    <string name="ble_disconnect">Disconnect</string>
    <string name="prompt">hint</string>
    <string name="prompt_confirm">determine</string>
    <string name="prompt_tips">knew</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="toast_not_support_usb">Your phone does not support USB HOST, please change to another tablet and try again！</string>
    <string name="toast_no_usb_permission">Failed to obtain usb permission!</string>
    <string name="toast_baud_rate_null">The baud rate is set to empty!</string>
    <string name="toast_open_usb_fail">Failed to open the usb device!</string>
    <string name="toast_usb_init_fail">USB device initialization failed!</string>
    <string name="toast_open_usb_success">Successfully open the usb device!</string>
    <string name="toast_usb_unauthorized">Unauthorized limit for usb devices!</string>
    <string name="toast_select_ble_mode">Please select the Bluetooth wireless mode!</string>
    <string name="toast_switch_lang">Switch language!</string>
    <string name="toast_not_support_ble">The device does not support BLE!</string>
    <string name="toast_open_location">Please turn on location service!</string>
    <string name="toast_open_ble">Please turn on Bluetooth service！</string>
    <string name="toast_connect_ble_device">Please connect ble device first</string>
    <string name="toast_measure_success">Successful measurement！</string>
    <string name="toast_lower_limit_less">The lower limit cannot be less than</string>
    <string name="toast_upper_limit_greater">The upper limit cannot be greater than</string>
    <string name="toast_lower_limit_upper_limit">The lower limit cannot be greater than the upper limit!</string>
    <string name="app_name">Tulip Sante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all"><u>View all</u></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="consult">Consult</string>
    <string name="symptomes">Symptomes</string>
    <string name="next">Next</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="prescription">Prescription</string>
    <string name="medicine">Medicine:</string>
    <string name="advice">Advice</string>
    <string name="reason_for_reference">Reason for reference</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="patient">Patient</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log-Out</string>
    <string name="id">Id</string>
    <string name="vaccination">Vaccination</string>
    <string name="date">Date</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="create_new">Create new</string>
    <string name="version">Version</string>
    <string name="my_patients">My Patients</string>
    <string name="search">Search</string>
    <string name="new_patient">+ New Patient</string>
    <string name="image">Image</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="action">Action</string>
    <string name="profile_information">Profile Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="other_details">Other details</string>
    <string name="speciality">Speciality</string>
    <string name="department">Department</string>
    <string name="hospital">Hospital</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="commune">Commune</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="primary_phone_number">Primary Phone Number</string>
    <string name="second_contact">Second Contact</string>
    <string name="email">Email</string>
    <string name="relation">Relation</string>
    <string name="name_contact">Name Contact</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are you sure you want to log-out?</string>
    <string name="hello">Hello </string>
    <string name="historique_presence">Presence History</string>
    <string name="search_by_date_yyyy_MM_dd">Search By Date YYYY/MM/DD</string>
    <string name="doctor">Doctor</string>
    <string name="status">Status</string>
    <string name="sort_by">Sort By:</string>
    <string name="historique_consultation">Consultation History</string>
    <string name="description">Description</string>
    <string name="select_language">Select a Language…</string>
    <string name="all_patients">All Patients</string>
    <string name="add_patient">+ Add Patient</string>
    <string name="bithdate">BithDate</string>
    <string name="save_patient">Save Patient</string>
    <string name="new_patient_profile">New Patient Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="situation_matrimoniale">Situation Matrimoniale</string>
    <string name="nationality">Nationality</string>
    <string name="citizen">Citizen</string>
    <string name="foreigner">Foreigner</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="divorced">Divorced</string>
    <string name="numero_d_identit">Numero d\'identité</string>
    <string name="blood_group">Blood Group</string>
    <string name="contact_details">Contact Details</string>
    <string name="region_administrative_region">Region / Administrative Region:</string>
    <string name="city_commune">City / Commune::</string>
    <string name="emergency_cont_details">Emergency Cont. Details</string>
    <string name="friend">Friend</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_tag">Add Tag</string>
    <string name="change_photo">Change Photo</string>
    <string name="basic_details">Basic details</string>
    <string name="patient_record">Patient Record</string>
    <string name="summary">Summary</string>
    <string name="statistics_weight_variations">Statistics weight variations</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="vices">Vices</string>
    <string name="antecedents">Antecedents</string>
    <string name="allergies_food">Allergies Food</string>
    <string name="allergies_drugs">Allergies Drugs</string>
    <string name="more">More</string>
    <string name="vaccination_history">Vaccination History</string>
    <string name="date_vaccination">Date Vaccination</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="category_vital">Category Vital</string>
    <string name="save">Save</string>
    <string name="tools">Tools</string>
    <string name="medical_history">Medical History</string>
    <string name="medical_status">Medical Status</string>
    <string name="parent">Parent</string>
    <string name="exam_to_take">Exam to take</string>
    <string name="investigation_procedure">Investigation / Procedure</string>
    <string name="patologie">Patologie</string>
    <string name="remarks">Remarks</string>
    <string name="patology">Patology</string>
    <string name="vaccine">Vaccine</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="endoscope">Endoscope</string>
    <string name="pulse_oxymeter">Pulse Oximeter</string>
    <string name="thermal_camera">Thermal Camera</string>
    <string name="focus_temperature">Focus Temperature</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="hottest_body_temp">Hottest Body Temp</string>
    <string name="historique">History</string>
    <string name="emergency">Emergency</string>
    <string name="dashboard">Dashboard</string>
    <string name="consultation_id">Consultation Id</string>
    <string name="path">Path</string>
    <string name="no_vaccine_data">No vaccine data</string>
    <string name="no_patients">No Patients</string>
    <string name="relation_management">Relation Management</string>
    <string name="add_relation">+ Add Relation</string>
    <string name="permission_management">Permission Management</string>
    <string name="s_no">S. No</string>
    <string name="no_data">No Data</string>
    <string name="add_permission">+ Add Permission</string>
    <string name="requested_on">Requested on</string>
    <string name="access_for">Access for</string>
    <string name="expiration">Expiration</string>
    <string name="conferencing">Conferencing</string>
    <string name="add_video_conference_user">Add video conference user</string>
    <string name="skipe_id">Skipe Id</string>
    <string name="save_user">Save user</string>
    <string name="mail">Mail</string>
    <string name="login">Login</string>
    <string name="or">-- Or --</string>
    <string name="super_admin">Super Admin Panel</string>
    <string name="tablet_settings">Tablet Settings</string>
    <string name="super_admin_login">Super Admin Login</string>
    <string name="no_internet_connection">⚠ No Internet Connection!</string>
    <string name="video">Video</string>
    <string name="preview">Preview</string>
    <string name="signature">Signature</string>
</resources>