<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPOther"
    android:padding="15dp"
    tools:context=".views.fragments.VaccinationHistoryFragment">

    <TextView
        android:paddingBottom="10dp"
        android:id="@+id/textViewVaccination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaccination_history"
        android:textSize="20sp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewNoData"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_vaccine_data"
        android:textSize="20sp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_below="@+id/textViewVaccination"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="450dp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:textColorHint="@color/grey"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:padding="8dp" />
        <TextView
            android:id="@+id/sortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:fontFamily="@font/lato"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sort_by"/>
        <Spinner
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_edittext"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <TableLayout
        android:layout_below="@id/linearLayout1"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:background="?attr/colorPD"
            android:padding="5dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/vaccine" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/status" />
            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/action" />
        </TableRow>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewVaccination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableLayout>


</RelativeLayout>