<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPOther"
    tools:context=".views.activities.PermissionManagementActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="?attr/colorPDOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="?attr/backButton">
            <ImageView
                android:padding="5dp"
                android:id="@+id/imageViewBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"/>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/tuliplog"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAdd"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/blue"
        android:layout_marginBottom="0dp">
        <TextView
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/add_permission"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:paddingStart="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:layout_below="@id/toolbar"
        android:id="@+id/textViewP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_management"
        android:textSize="20sp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewNoData"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:paddingStart="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="20sp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_below="@id/textViewP"
        android:id="@+id/tabLayout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/textViewRelat"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/s_no" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/requested_on" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/access_for" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/expiration" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/signature" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/status" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/action" />
        </TableRow>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewPermission"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </TableLayout>

</RelativeLayout>