<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_default"
        android:elevation="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F0F0F0"
            android:gravity="center"
            android:text="@string/uart_setting"
            android:textColor="#353535"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/uart_tips" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/txt_baud_rate"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/uart_baud_rate"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_baund_rate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/txt_baud_rate" />

            <TextView
                android:id="@+id/txt_data_bit"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_below="@id/txt_baud_rate"
                android:gravity="center_vertical"
                android:text="@string/uart_data_bit"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_data_bit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/txt_baud_rate"
                android:layout_toRightOf="@id/txt_baud_rate" />

            <TextView
                android:id="@+id/txt_parity"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_below="@id/txt_data_bit"
                android:gravity="center_vertical"
                android:text="@string/uart_parity"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_parity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/txt_data_bit"
                android:layout_toRightOf="@id/txt_baud_rate" />

            <TextView
                android:id="@+id/txt_stop_bit"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_below="@id/txt_parity"
                android:gravity="center_vertical"
                android:text="@string/uart_stop_bit"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_stop_bit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/txt_parity"
                android:layout_toRightOf="@id/txt_baud_rate" />

            <TextView
                android:id="@+id/txt_flow_control"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_below="@id/txt_stop_bit"
                android:gravity="center_vertical"
                android:text="@string/uart_flow_control"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_flow_control"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/txt_stop_bit"
                android:layout_toRightOf="@id/txt_baud_rate" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/prompt_cancel"
                android:textColor="#535353"
                android:textSize="13dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e5e5e5" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/prompt_confirm"
                android:textColor="#0085e6"
                android:textSize="13dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>