<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:background="?attr/colorPOther"
    tools:context=".views.fragments.HistoriqueTacheFragment">

    <TextView
        android:id="@+id/textViewHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/historique_consultation"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewNoData"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="20sp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_below="@+id/textViewHistorique"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="450dp"
            android:focusable="false"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:textColorHint="@color/grey"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/search_by_date_yyyy_MM_dd"
            android:padding="8dp" />
    </LinearLayout>


    <TableLayout
        android:layout_below="@+id/linearLayout1"
        android:id="@+id/tabLayout1"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:background="?attr/colorPD"
            android:padding="5dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/date" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/patient" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/description" />
        </TableRow>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewTaches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</TableLayout>


</RelativeLayout>